--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <nav>
                             <ul class="hs_menu collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="about.md">About Us</a></li>
                                 <li>
                                     <a>Services</a>
                                     <ul>
